Bug 1349646 - s/-moz-inner-focus/-moz-focus-inner/. r=wisniewskit+471096

MozReview-Commit-ID: Jvw2P7AfSCG

--HG--
extra : rebase_source : 243b23a66ac71475f276e7186a7e79c96f618765